--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "methods-node",
-  "version": "1.0.64",
+  "version": "1.0.69",
   "description": "methods",
   "main": "index.min.js",
   "directories": {
@@ -14,7 +14,8 @@
     "url": "git+https://github.com/aenuen/make-node.git"
   },
   "keywords": [
-    "methods"
+    "methods",
+    "node"
   ],
   "author": "aenuen",
   "license": "ISC",
